# gipuma

./: .gitignore  CMakeLists.txt  README.md  algorithmparameters.h  camera.h  cameraGeometryUtils.h  cameraparameters.h  config.h  displayUtils.h  fileIoUtils.h  gipuma.cu  gipuma.h  globalstate.h  groundTruthUtils.h  helper_cuda.h  imageinfo.h  linestate.h  main.cpp  main.h  managed.h  mathUtils.h  mia-utils.h  readmeWindows.txt  vector_operations.h
data/dtu/calib/: rect_001_3_r5000.png.P  rect_001_6_r5000.png.P  rect_002_3_r5000.png.P  rect_002_3_r7000.png.P  rect_003_3_r5000.png.P  rect_003_6_r5000.png.P  rect_004_3_r5000.png.P  rect_004_3_r7000.png.P  rect_005_3_r5000.png.P  rect_005_3_r7000.png.P  rect_006_3_r5000.png.P  rect_006_3_r7000.png.P  rect_007_3_r5000.png.P  rect_007_3_r7000.png.P  rect_008_3_r5000.png.P  rect_008_3_r7000.png.P  rect_009_3_r5000.png.P  rect_009_3_r7000.png.P  rect_010_3_r5000.png.P  rect_010_6_r5000.png.P  rect_011_3_r5000.png.P  rect_011_3_r7000.png.P  rect_012_3_r5000.png.P  rect_012_3_r7000.png.P  rect_013_3_r5000.png.P  rect_013_3_r7000.png.P  rect_014_3_r5000.png.P  rect_014_6_r5000.png.P  rect_015_3_r5000.png.P  rect_015_6_r5000.png.P  rect_016_3_r5000.png.P  rect_016_3_r7000.png.P  rect_017_3_r5000.png.P  rect_017_6_r5000.png.P  rect_018_3_r5000.png.P  rect_018_3_r7000.png.P  rect_019_3_r5000.png.P  rect_019_3_r7000.png.P  rect_020_3_r5000.png.P  rect_020_3_r7000.png.P  (+88 more)
scripts/: dino.sh  dinoRing.sh  dinoSparseRing.sh  download-dtu.sh  download-middlebury.sh  dtu_accurate.sh  dtu_fast.sh  temple.sh  templeRing.sh  templeSparseRing.sh
